<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FilterManager</string>
    <string name="title_app_detail">App Detail</string>

		<string name="std_line_height">40sp</string>

		<string-array name="fragment_app_detail_sensor_actions">
			<!-- these names can be changed as long as the order is preserved -->
			<item>Normal</item>
			<item>Suppress</item>
			<item>Replace</item> <!-- aka constant value -->
			<!--<item>Delay</item> this action has been removed-->
			<item>Fuzz</item> <!-- aka perturb -->
		</string-array>

		<string name="constant_max_length">11</string>

		<string-array name="fragment_app_detail_sensor_action_arguments_perturb_distributions">
			<item>Gaussian</item>
			<item>Uniform</item>
			<item>Exponential</item>
		</string-array>
		<string name="mean">Mean</string>
		<string name="variance">Variance</string>
		<string name="unif_min">Min</string>
		<string name="unif_max">Max</string>
		<string name="lambda">Lambda</string>

    <string name="decimal_separator">.</string>

    <string name="time_separator">:</string>
    <string name="days">Days</string>
    <string name="hours">Hrs</string>
    <string name="minutes">Mins</string>
    <string name="seconds">Secs</string>
    <string name="milliseconds">ms</string>

		<string name="fragment_app_detail_viewtoggle_showinginferences"><u>In</u> S</string>
		<string name="fragment_app_detail_viewtoggle_showingsensors">In <u>S</u></string>

		<string name="fragment_app_detail_inference_action_allow"><font fgcolor="#ffff0000"><b>Allowed</b></font></string>
		<string name="fragment_app_detail_inference_action_disallow">Blocked</string>
</resources>
