<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:paddingTop="12dp"
	android:paddingBottom="28dp"
	android:orientation="vertical"
>
	<View
		android:layout_width="fill_parent"
		android:layout_height="1dip"
		android:background="#33000000"
	/>
	<View
		android:layout_width="fill_parent"
		android:layout_height="8dp"
		android:background="#00000000"
	/>

	<!-- Main controls {{{ -->
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
	>
		<TextView
			android:id="@+id/fragment_app_detail_sensor_name"
			android:layout_width="0dp"
			android:layout_weight=".65"
			android:layout_height="wrap_content"
			android:gravity="center_vertical"
			android:textSize="18sp"
			android:textStyle="bold"
			android:textColor="#ffcc0000"
		/>

		<Spinner
			android:id="@+id/fragment_app_detail_sensor_action"
			android:layout_width="0dp"
			android:layout_weight=".35"
			android:layout_height="wrap_content"
			android:drawSelectorOnTop="true"
			android:entries="@array/fragment_app_detail_sensor_actions"
		/>
	</LinearLayout>
	<!-- }}} -->
	<!-- Arguments {{{ -->
	<LinearLayout
		android:id="@+id/fragment_app_detail_sensor_action_arguments"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:paddingLeft="16sp"
		android:orientation="vertical"
	>
		<!-- Constants {{{ -->

		<!-- Constant 0 {{{ -->
		<LinearLayout
			android:id="@+id/fragment_app_detail_sensor_action_arguments_constant0"
			android:layout_width="match_parent"
			android:layout_height="40sp"
			android:visibility="gone"
			android:orientation="horizontal"
		>
			<TextView
				android:id="@+id/fragment_app_detail_sensor_action_arguments_constant0_name"
				android:layout_width="80sp"
				android:layout_height="wrap_content"
				android:gravity="right"
			/>

			<EditText
				android:id="@+id/fragment_app_detail_sensor_action_arguments_constant0_value"
				android:layout_width="110sp"
				android:layout_height="match_parent"
				android:editable="true"
				android:inputType="number"
				android:digits="-0123456789."
				android:maxLength="@string/constant_max_length"
			/>

			<TextView
				android:id="@+id/fragment_app_detail_sensor_action_arguments_constant0_unit"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
			/>
		</LinearLayout>
		<!-- }}} -->
		<!-- Constant 1 {{{ -->
		<LinearLayout
			android:id="@+id/fragment_app_detail_sensor_action_arguments_constant1"
			android:layout_width="match_parent"
			android:layout_height="40sp"
			android:visibility="gone"
			android:orientation="horizontal"
		>
			<TextView
				android:id="@+id/fragment_app_detail_sensor_action_arguments_constant1_name"
				android:layout_width="80sp"
				android:layout_height="wrap_content"
				android:gravity="right"
			/>

			<EditText
				android:id="@+id/fragment_app_detail_sensor_action_arguments_constant1_value"
				android:layout_width="110sp"
				android:layout_height="match_parent"
				android:inputType="number"
				android:editable="true"
				android:digits="-0123456789."
				android:maxLength="@string/constant_max_length"
			/>

			<TextView
				android:id="@+id/fragment_app_detail_sensor_action_arguments_constant1_unit"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
			/>
		</LinearLayout>
		<!-- }}} -->
		<!-- Constant 2 {{{ -->
		<LinearLayout
			android:id="@+id/fragment_app_detail_sensor_action_arguments_constant2"
			android:layout_width="match_parent"
			android:layout_height="40sp"
			android:visibility="gone"
			android:orientation="horizontal"
		>
			<TextView
				android:id="@+id/fragment_app_detail_sensor_action_arguments_constant2_name"
				android:layout_width="80sp"
				android:layout_height="wrap_content"
				android:gravity="right"
			/>

			<EditText
				android:id="@+id/fragment_app_detail_sensor_action_arguments_constant2_value"
				android:layout_width="110sp"
				android:layout_height="match_parent"
				android:inputType="number"
				android:editable="true"
				android:digits="-0123456789."
				android:maxLength="@string/constant_max_length"
			/>

			<TextView
				android:id="@+id/fragment_app_detail_sensor_action_arguments_constant2_unit"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
			/>
		</LinearLayout>
		<!-- }}} -->
		<!-- Constant 3 {{{ -->
		<LinearLayout
			android:id="@+id/fragment_app_detail_sensor_action_arguments_constant3"
			android:layout_width="match_parent"
			android:layout_height="40sp"
			android:visibility="gone"
			android:orientation="horizontal"
		>
			<TextView
				android:id="@+id/fragment_app_detail_sensor_action_arguments_constant3_name"
				android:layout_width="80sp"
				android:layout_height="wrap_content"
				android:gravity="right"
			/>

			<EditText
				android:id="@+id/fragment_app_detail_sensor_action_arguments_constant3_value"
				android:layout_width="110sp"
				android:layout_height="match_parent"
				android:inputType="number"
				android:editable="true"
				android:digits="-0123456789."
				android:maxLength="@string/constant_max_length"
			/>

			<TextView
				android:id="@+id/fragment_app_detail_sensor_action_arguments_constant3_unit"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
			/>
		</LinearLayout>
		<!-- }}} -->
		<!-- Constant 4 {{{ -->
		<LinearLayout
			android:id="@+id/fragment_app_detail_sensor_action_arguments_constant4"
			android:layout_width="match_parent"
			android:layout_height="40sp"
			android:visibility="gone"
			android:orientation="horizontal"
		>
			<TextView
				android:id="@+id/fragment_app_detail_sensor_action_arguments_constant4_name"
				android:layout_width="80sp"
				android:layout_height="wrap_content"
				android:gravity="right"
			/>

			<EditText
				android:id="@+id/fragment_app_detail_sensor_action_arguments_constant4_value"
				android:layout_width="110sp"
				android:layout_height="match_parent"
				android:editable="true"
				android:inputType="number"
				android:digits="-0123456789."
				android:maxLength="@string/constant_max_length"
			/>

			<TextView
				android:id="@+id/fragment_app_detail_sensor_action_arguments_constant4_unit"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
			/>
		</LinearLayout>
		<!-- }}} -->

		<!-- }}} -->
		<!-- Delay {{{ -->

		<!-- delay is no longer a supported action -->

		<!--
		<LinearLayout
			android:id="@+id/fragment_app_detail_sensor_action_arguments_delay"
			android:layout_width="match_parent"
			android:layout_height="40sp"
			android:visibility="gone"
		>
			<EditText
				android:id="@+id/fragment_app_detail_sensor_action_arguments_delay_days"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:editable="true"
				android:hint="@string/days"
				android:inputType="number"
				android:digits="0123456789"
				android:maxLength="2"
			/>

			<View
				android:layout_width="20sp"
				android:layout_height="wrap_content"
			/>

			<EditText
				android:id="@+id/fragment_app_detail_sensor_action_arguments_delay_hours"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:editable="true"
				android:hint="@string/hours"
				android:inputType="number"
				android:digits="0123456789"
				android:maxLength="2"
			/>

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/time_separator"
			/>

			<EditText
				android:id="@+id/fragment_app_detail_sensor_action_arguments_delay_minutes"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:editable="true"
				android:hint="@string/minutes"
				android:inputType="number"
				android:digits="0123456789"
				android:maxLength="2"
			/>

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/time_separator"
			/>

			<EditText
				android:id="@+id/fragment_app_detail_sensor_action_arguments_delay_seconds"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:editable="true"
				android:hint="@string/seconds"
				android:inputType="number"
				android:digits="0123456789"
				android:maxLength="2"
			/>

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/decimal_separator"
			/>

			<EditText
				android:id="@+id/fragment_app_detail_sensor_action_arguments_delay_milliseconds"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:editable="true"
				android:hint="@string/milliseconds"
				android:inputType="number"
				android:digits="0123456789"
				android:maxLength="3"
			/>
		</LinearLayout>
		-->

		<!-- }}} -->
		<!-- Perturb {{{ -->

		<LinearLayout
			android:id="@+id/fragment_app_detail_sensor_action_arguments_perturb"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="horizontal"
			android:visibility="gone"
		>
			<Spinner
				android:id="@+id/fragment_app_detail_sensor_action_arguments_perturb_distribution"
				android:layout_width="0dp"
				android:layout_weight=".4"
				android:layout_height="wrap_content"
				android:drawSelectorOnTop="true"
				android:entries="@array/fragment_app_detail_sensor_action_arguments_perturb_distributions"
			/>

			<EditText
				android:id="@+id/fragment_app_detail_sensor_action_arguments_perturb_mean"
				android:layout_width="0dp"
				android:layout_weight=".30"
				android:layout_height="match_parent"
				android:visibility="visible"
				android:editable="true"
				android:hint="@string/mean"
				android:inputType="number"
				android:digits="0123456789."
				android:maxLength="@string/constant_max_length"
			/>

			<EditText
				android:id="@+id/fragment_app_detail_sensor_action_arguments_perturb_variance"
				android:layout_width="0dp"
				android:layout_weight=".30"
				android:layout_height="match_parent"
				android:visibility="visible"
				android:editable="true"
				android:hint="@string/variance"
				android:inputType="number"
				android:digits="0123456789."
				android:maxLength="@string/constant_max_length"
			/>

			<EditText
				android:id="@+id/fragment_app_detail_sensor_action_arguments_perturb_min"
				android:layout_width="0dp"
				android:layout_weight=".30"
				android:layout_height="match_parent"
				android:visibility="gone"
				android:editable="true"
				android:hint="@string/unif_min"
				android:inputType="number"
				android:digits="0123456789."
				android:maxLength="@string/constant_max_length"
			/>

			<EditText
				android:id="@+id/fragment_app_detail_sensor_action_arguments_perturb_max"
				android:layout_width="0dp"
				android:layout_weight=".30"
				android:layout_height="match_parent"
				android:visibility="gone"
				android:editable="true"
				android:hint="@string/unif_max"
				android:inputType="number"
				android:digits="0123456789."
				android:maxLength="@string/constant_max_length"
			/>

			<EditText
				android:id="@+id/fragment_app_detail_sensor_action_arguments_perturb_lambda"
				android:layout_width="0dp"
				android:layout_weight=".60"
				android:layout_height="match_parent"
				android:visibility="gone"
				android:editable="true"
				android:hint="@string/lambda"
				android:inputType="number"
				android:digits="0123456789."
				android:maxLength="@string/constant_max_length"
			/>
		</LinearLayout>

		<!-- }}} -->

		<LinearLayout
			android:id="@+id/fragment_app_detail_sensor_action_arguments_timing"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:paddingTop="18dp"
			android:orientation="vertical"
			android:visibility="gone"
		>
			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="Apply during following times (24hr format):"
			/>

			<!-- Check boxes {{{ -->

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal"
			>
				<CheckBox
					android:id="@+id/fragment_app_detail_sensor_action_arguments_timing_sunday"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:paddingRight="2dp"
					android:text="S"
				/>

				<CheckBox
					android:id="@+id/fragment_app_detail_sensor_action_arguments_timing_monday"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:paddingRight="2dp"
					android:text="M"
				/>

				<CheckBox
					android:id="@+id/fragment_app_detail_sensor_action_arguments_timing_tuesday"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:paddingRight="2dp"
					android:text="T"
				/>

				<CheckBox
					android:id="@+id/fragment_app_detail_sensor_action_arguments_timing_wednesday"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:paddingRight="2dp"
					android:text="W"
				/>

				<CheckBox
					android:id="@+id/fragment_app_detail_sensor_action_arguments_timing_thursday"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:paddingRight="2dp"
					android:text="Th"
				/>

				<CheckBox
					android:id="@+id/fragment_app_detail_sensor_action_arguments_timing_friday"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:paddingRight="2dp"
					android:text="F"
				/>

				<CheckBox
					android:id="@+id/fragment_app_detail_sensor_action_arguments_timing_saturday"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:paddingRight="2dp"
					android:text="Sa"
				/>
			</LinearLayout>

			<!-- }}} -->
			<!-- Times {{{ -->

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="40sp"
			>
				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="From"
					android:paddingRight="2sp"
				/>

				<EditText
					android:id="@+id/fragment_app_detail_sensor_action_arguments_timing_fromhour"
					android:layout_width="wrap_content"
					android:layout_height="match_parent"
					android:editable="true"
					android:hint="@string/hours"
					android:inputType="number"
					android:digits="0123456789"
					android:maxLength="2"
				/>

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/time_separator"
				/>

				<EditText
					android:id="@+id/fragment_app_detail_sensor_action_arguments_timing_fromminutes"
					android:layout_width="wrap_content"
					android:layout_height="match_parent"
					android:editable="true"
					android:hint="@string/minutes"
					android:inputType="number"
					android:digits="0123456789"
					android:maxLength="2"
				/>

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="to"
					android:paddingLeft="12sp"
					android:paddingRight="2sp"
				/>

				<EditText
					android:id="@+id/fragment_app_detail_sensor_action_arguments_timing_tohour"
					android:layout_width="wrap_content"
					android:layout_height="match_parent"
					android:editable="true"
					android:hint="@string/hours"
					android:inputType="number"
					android:digits="0123456789"
					android:maxLength="2"
				/>

				<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/time_separator"
				/>

				<EditText
					android:id="@+id/fragment_app_detail_sensor_action_arguments_timing_tominutes"
					android:layout_width="wrap_content"
					android:layout_height="match_parent"
					android:editable="true"
					android:hint="@string/minutes"
					android:inputType="number"
					android:digits="0123456789"
					android:maxLength="2"
				/>
			</LinearLayout>

			<!-- }}} -->
		</LinearLayout>
	</LinearLayout>

	<!-- }}} -->
</LinearLayout>
